fix distort in create profile member

--- a/src/component/MemberModal.css
+++ b/src/component/MemberModal.css
@@ -58,3 +58,20 @@ hr.listHr {
   color: black;
   border: none;
 }
+
+input[type='text'],
+select {
+  width: 100%;
+  padding: 12px 20px;
+  padding-left: 8px;
+  margin: 15px 2px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  color: black;
+}
+
+input[type='text']:focus {
+  background-color: rgb(235, 247, 244);
+}
